# nvfancontrol

./: .gitignore  20-nvidia.conf  Cargo.toml  README.md  functions.json  ghidraScriptFor_nvapi_dll.py
.github/workflows/: ci.yml
ci/: ubuntu-install-packages
src/: config.rs  fanflicker.rs  fanspeedcurve.rs  main.rs
src/nvctrl/: Cargo.toml  Makefile  build.rs  lib.rs  nvctrl_c.c
src/nvctrl/os/: mod.rs  unix.rs  windows.rs
