[package]
name = "nvfancontrol"
version = "0.4.1"
authors = ["Spyros Stathopoulos <spystath@gmail.com>"]

[dependencies]
log = "0.4"
getopts = "0.2"
time = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
dirs = "1.0.4"

[target.'cfg(unix)'.dependencies]
nix = "0.10.0"

[target.'cfg(windows)'.dependencies]
ctrlc = "3.1.0"

[dependencies.nvctrl]
path = "src/nvctrl"

[features]
dynamic-xnvctrl = ["nvctrl/dynamic-xnvctrl"]
