[package]
name = "nvfancontrol"
version = "0.4.99"
authors = ["Spyros Stathopoulos <spystath@gmail.com>"]

[dependencies]
log = "0.4"
getopts = "0.2"
time = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
toml = "0.5"
dirs = "2.0"

[target.'cfg(unix)'.dependencies]
nix = "0.20.2"

[target.'cfg(windows)'.dependencies]
ctrlc = "3.1"

[dependencies.nvctrl]
path = "src/nvctrl"

[features]
dynamic-xnvctrl = ["nvctrl/dynamic-xnvctrl"]
