[package]
name = "nvctrl"
version = "0.4.99"
authors = ["Spyros Stathopoulos <spystath@gmail.com>"]
build = "build.rs"

[dependencies]
libc = "*"
serde = "1.0"
serde_derive = "1.0"

[target.'cfg(windows)'.dependencies]
libloading = "*"
lazy_static = "*"

[lib]
name = "nvctrl"
path = "lib.rs"

[features]
dynamic-xnvctrl = []
