[package]
name = "nvctrl"
version = "0.4.99"
authors = ["Spyros Stathopoulos <spystath@gmail.com>"]
build = "build.rs"

[dependencies]
libc = "0.2"
serde = "1.0"
serde_derive = "1.0"

[target.'cfg(windows)'.dependencies]
libloading = "0.6"
lazy_static = "1.4"

[lib]
name = "nvctrl"
path = "lib.rs"

[features]
dynamic-xnvctrl = []
